<resources>
    <string name="app_name">Weather</string>
    <string name="city_located">Saint-Petersburg</string>
    <string name="comfort_t">Comfort t°:</string>
    <string name="humidity">Humidity:</string>
    <string name="barometer">Barometer:</string>
    <string name="wind">Wind:</string>
    <string name="hint_enter_city_name">Enter city name</string>
    <string name="button_show_weather">Show Weather</string>
    <string name="temperature">Temperature:</string>
</resources>
