<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MyDarkTheme"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_big"
    tools:context=".StartActivity">

    <EditText
        android:id="@+id/city_editText"
        android:hint="@string/hint_enter_city_name"
        style="@style/MyDarkEditTextStyle"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:text="@string/comfort_t"
            style="@style/MyDarkTextStyle"/>

        <CheckBox
            android:id="@+id/comfort_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            style="@style/MyDarkTextStyle"
            android:text="@string/humidity" />

        <CheckBox
            android:id="@+id/humidity_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            style="@style/MyDarkTextStyle"
            android:text="@string/barometer" />

        <CheckBox
            android:id="@+id/barometer_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            style="@style/MyDarkTextStyle"
            android:text="@string/wind" />

        <CheckBox
            android:id="@+id/wind_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/show_weather_button"
        style="@style/MyDarkButtonStyle"
        android:text="@string/button_show_weather" />
</LinearLayout>