<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_dark_theme_color"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="@dimen/default_margin">

    <ImageView
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/weather_condition" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            style="@style/MyDarkTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature" />

        <TextView
            style="@style/MyDarkTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comfort_t" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hour_temperature"
            style="@style/MyDarkTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/temperature" />

        <TextView
            android:id="@+id/hour_comfort_t"
            style="@style/MyDarkTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            tools:text="@string/comfort_t" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            style="@style/MyDarkTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind" />

        <TextView
            style="@style/MyDarkTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hour_wind"
            style="@style/MyDarkTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/wind" />

        <TextView
            android:id="@+id/hour_humidity"
            style="@style/MyDarkTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/humidity" />
    </LinearLayout>

</LinearLayout>